k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: postgres
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: initdb
          configMap:
            name: initdb-config
      containers:
        - name: postgres
          image: postgres:15.2-alpine
          env:
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: postgres-secret
                  key: POSTGRES_PASSWORD
            - name: CAMPGROUNDS_DB
              value: "campgrounds"
            - name: CAMPGROUNDS_USER
              value: "campgrounds_user"
            - name: CAMPGROUNDS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: campgrounds-secret
                  key: CAMPGROUNDS_PASSWORD
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
